Tree and OAS updated modules

--- a/OAS/tapi-gnmi-streaming.yaml
+++ b/OAS/tapi-gnmi-streaming.yaml
@@ -1,12 +1,41 @@
 ---
 swagger: "2.0"
 info:
-  description: "\nThis module contains TAPI Streaming gNMI Model definitions.\nSource:\
-    \ TapiStreamingGnmi.uml\n- The TAPI YANG models included in this TAPI release\
-    \ are a *normative* part of the TAPI SDK.\n- The YANG specifications have been\
-    \ generated from the corresponding UML model using the [ONF EAGLE UML2YANG mapping\
-    \ tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\nand further\
-    \ edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
+  description: "\nThis module contains TAPI Notification Model definitions.\nSource:\
+    \ TapiNotification.uml\n- The TAPI YANG models included in this TAPI release are\
+    \ a *normative* part of the TAPI SDK.\n- The YANG specifications have been generated\
+    \ from the corresponding UML model using the [ONF EAGLE UML2YANG mapping tool]\n\
+    <https://github.com/OpenNetworkingFoundation/EagleUmlYang>\nand further edited\
+    \ manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n<https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n\
+    - Status of YANG model artifacts can be determined by referring to the corresponding\
+    \ UML artifacts.\nAs described in the UML models, some artifacts are considered\
+    \ *experimental*, and thus the corresponding YANG artifacts.\n- The ONF TAPI release\
+    \ process does not guarantee backward compatibility of YANG models across major\
+    \ versions of TAPI releases.\nThe YANG model backward compatibility criteria are\
+    \ outlined in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models\
+    \ included in this release may not be backward compatible with previous TAPI releases.\n\
+    Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
+    \ This module is distributed under the Apache License 2.0.,\nThis module contains\
+    \ TAPI Common Model definitions.\nSource: TapiCommon.uml\n- The TAPI YANG models\
+    \ included in this TAPI release are a *normative* part of the TAPI SDK.\n- The\
+    \ YANG specifications have been generated from the corresponding UML model using\
+    \ the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
+    and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
+    <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
+    \ YANG model artifacts can be determined by referring to the corresponding UML\
+    \ artifacts.\nAs described in the UML models, some artifacts are considered *experimental*,\
+    \ and thus the corresponding YANG artifacts.\n- The ONF TAPI release process does\
+    \ not guarantee backward compatibility of YANG models across major versions of\
+    \ TAPI releases.\nThe YANG model backward compatibility criteria are outlined\
+    \ in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models included\
+    \ in this release may not be backward compatible with previous TAPI releases.\n\
+    Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
+    \ This module is distributed under the Apache License 2.0.,\nThis module contains\
+    \ TAPI Streaming Model definitions.\nSource: TapiStreaming.uml\n- The TAPI YANG\
+    \ models included in this TAPI release are a *normative* part of the TAPI SDK.\n\
+    - The YANG specifications have been generated from the corresponding UML model\
+    \ using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
+    and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
     <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
     \ YANG model artifacts can be determined by referring to the corresponding UML\
     \ artifacts.\nAs described in the UML models, some artifacts are considered *experimental*,\
@@ -32,40 +61,10 @@ info:
     \ in this release may not be backward compatible with previous TAPI releases.\n\
     Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
     \ This module is distributed under the Apache License 2.0.,\nThis module contains\
-    \ TAPI OAM Model definitions.\nSource: TapiOam.uml\n- The TAPI YANG models included\
-    \ in this TAPI release are a *normative* part of the TAPI SDK.\n- The YANG specifications\
-    \ have been generated from the corresponding UML model using the [ONF EAGLE UML2YANG\
-    \ mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
-    and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
-    <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
-    \ YANG model artifacts can be determined by referring to the corresponding UML\
-    \ artifacts.\nAs described in the UML models, some artifacts are considered *experimental*,\
-    \ and thus the corresponding YANG artifacts.\n- The ONF TAPI release process does\
-    \ not guarantee backward compatibility of YANG models across major versions of\
-    \ TAPI releases.\nThe YANG model backward compatibility criteria are outlined\
-    \ in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models included\
-    \ in this release may not be backward compatible with previous TAPI releases.\n\
-    Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
-    \ This module is distributed under the Apache License 2.0.,\nThis module contains\
-    \ TAPI Connectivity Model definitions.\nSource: TapiConnectivity.uml\n- The TAPI\
-    \ YANG models included in this TAPI release are a *normative* part of the TAPI\
-    \ SDK.\n- The YANG specifications have been generated from the corresponding UML\
-    \ model using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
-    and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
-    <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
-    \ YANG model artifacts can be determined by referring to the corresponding UML\
-    \ artifacts.\nAs described in the UML models, some artifacts are considered *experimental*,\
-    \ and thus the corresponding YANG artifacts.\n- The ONF TAPI release process does\
-    \ not guarantee backward compatibility of YANG models across major versions of\
-    \ TAPI releases.\nThe YANG model backward compatibility criteria are outlined\
-    \ in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models included\
-    \ in this release may not be backward compatible with previous TAPI releases.\n\
-    Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
-    \ This module is distributed under the Apache License 2.0.,\nThis module contains\
-    \ TAPI Common Model definitions.\nSource: TapiCommon.uml\n- The TAPI YANG models\
-    \ included in this TAPI release are a *normative* part of the TAPI SDK.\n- The\
-    \ YANG specifications have been generated from the corresponding UML model using\
-    \ the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
+    \ TAPI Streaming gNMI Model definitions.\nSource: TapiStreamingGnmi.uml\n- The\
+    \ TAPI YANG models included in this TAPI release are a *normative* part of the\
+    \ TAPI SDK.\n- The YANG specifications have been generated from the corresponding\
+    \ UML model using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
     and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
     <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
     \ YANG model artifacts can be determined by referring to the corresponding UML\
@@ -92,7 +91,7 @@ info:
     \ in this release may not be backward compatible with previous TAPI releases.\n\
     Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
     \ This module is distributed under the Apache License 2.0.,\nThis module contains\
-    \ TAPI Notification Model definitions.\nSource: TapiNotification.uml\n- The TAPI\
+    \ TAPI Connectivity Model definitions.\nSource: TapiConnectivity.uml\n- The TAPI\
     \ YANG models included in this TAPI release are a *normative* part of the TAPI\
     \ SDK.\n- The YANG specifications have been generated from the corresponding UML\
     \ model using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
@@ -107,10 +106,10 @@ info:
     \ in this release may not be backward compatible with previous TAPI releases.\n\
     Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
     \ This module is distributed under the Apache License 2.0.,\nThis module contains\
-    \ TAPI Streaming Model definitions.\nSource: TapiStreaming.uml\n- The TAPI YANG\
-    \ models included in this TAPI release are a *normative* part of the TAPI SDK.\n\
-    - The YANG specifications have been generated from the corresponding UML model\
-    \ using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
+    \ TAPI OAM Model definitions.\nSource: TapiOam.uml\n- The TAPI YANG models included\
+    \ in this TAPI release are a *normative* part of the TAPI SDK.\n- The YANG specifications\
+    \ have been generated from the corresponding UML model using the [ONF EAGLE UML2YANG\
+    \ mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
     and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
     <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
     \ YANG model artifacts can be determined by referring to the corresponding UML\
@@ -123,7 +122,7 @@ info:
     Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
     \ This module is distributed under the Apache License 2.0."
   version: "2.4.1"
-  title: "tapi-gnmi-streaming,tapi-topology,tapi-oam,tapi-connectivity,tapi-common,tapi-path-computation,tapi-notification,tapi-streaming\
+  title: "tapi-notification,tapi-common,tapi-streaming,tapi-topology,tapi-gnmi-streaming,tapi-path-computation,tapi-connectivity,tapi-oam\
     \ API"
 host: "localhost:1234"
 consumes:
@@ -62172,9 +62171,9 @@ definitions:
   tapi.connectivity.EventNotificationAugmentation17:
     type: "object"
     properties:
-      route:
+      switch:
         description: "none"
-        $ref: "#/definitions/tapi.connectivity.Route"
+        $ref: "#/definitions/tapi.connectivity.Switch"
     description: "none"
     x-augmentation:
       prefix: "tapi-connectivity"
@@ -62182,9 +62181,9 @@ definitions:
   tapi.connectivity.EventNotificationAugmentation18:
     type: "object"
     properties:
-      switch:
+      route:
         description: "none"
-        $ref: "#/definitions/tapi.connectivity.Switch"
+        $ref: "#/definitions/tapi.connectivity.Route"
     description: "none"
     x-augmentation:
       prefix: "tapi-connectivity"
@@ -62809,9 +62808,9 @@ definitions:
   tapi.notification.EventNotificationAugmentation1:
     type: "object"
     properties:
-      profile:
+      attribute-value-change:
         description: "none"
-        $ref: "#/definitions/tapi.common.Profile"
+        $ref: "#/definitions/tapi.notification.AttributeValueChange"
     description: "none"
     x-augmentation:
       prefix: "tapi-notification"
@@ -62819,9 +62818,9 @@ definitions:
   tapi.notification.EventNotificationAugmentation2:
     type: "object"
     properties:
-      attribute-value-change:
+      profile:
         description: "none"
-        $ref: "#/definitions/tapi.notification.AttributeValueChange"
+        $ref: "#/definitions/tapi.common.Profile"
     description: "none"
     x-augmentation:
       prefix: "tapi-notification"
@@ -63382,9 +63381,9 @@ definitions:
   tapi.oam.EventNotificationAugmentation6:
     type: "object"
     properties:
-      mip:
+      oam-job-descriptor:
         description: "none"
-        $ref: "#/definitions/tapi.oam.Mip"
+        $ref: "#/definitions/tapi.oam.OamJobDescriptor"
     description: "none"
     x-augmentation:
       prefix: "tapi-oam"
@@ -63392,9 +63391,9 @@ definitions:
   tapi.oam.EventNotificationAugmentation7:
     type: "object"
     properties:
-      oam-job-descriptor:
+      mip:
         description: "none"
-        $ref: "#/definitions/tapi.oam.OamJobDescriptor"
+        $ref: "#/definitions/tapi.oam.Mip"
     description: "none"
     x-augmentation:
       prefix: "tapi-oam"
@@ -64231,14 +64230,24 @@ definitions:
   tapi.path.computation.EventNotificationAugmentation20:
     type: "object"
     properties:
-      path:
+      path-optimization-constraint:
         description: "none"
-        $ref: "#/definitions/tapi.path.computation.Path"
+        $ref: "#/definitions/tapi.path.computation.PathOptimizationConstraint"
     description: "none"
     x-augmentation:
       prefix: "tapi-path-computation"
       namespace: "urn:onf:otcc:yang:tapi-path-computation"
   tapi.path.computation.EventNotificationAugmentation21:
+    type: "object"
+    properties:
+      path-service-end-point:
+        description: "none"
+        $ref: "#/definitions/tapi.path.computation.PathServiceEndPoint"
+    description: "none"
+    x-augmentation:
+      prefix: "tapi-path-computation"
+      namespace: "urn:onf:otcc:yang:tapi-path-computation"
+  tapi.path.computation.EventNotificationAugmentation22:
     type: "object"
     properties:
       path-objective-function:
@@ -64248,22 +64257,12 @@ definitions:
     x-augmentation:
       prefix: "tapi-path-computation"
       namespace: "urn:onf:otcc:yang:tapi-path-computation"
-  tapi.path.computation.EventNotificationAugmentation22:
-    type: "object"
-    properties:
-      path-optimization-constraint:
-        description: "none"
-        $ref: "#/definitions/tapi.path.computation.PathOptimizationConstraint"
-    description: "none"
-    x-augmentation:
-      prefix: "tapi-path-computation"
-      namespace: "urn:onf:otcc:yang:tapi-path-computation"
   tapi.path.computation.EventNotificationAugmentation23:
     type: "object"
     properties:
-      path-service-end-point:
+      path:
         description: "none"
-        $ref: "#/definitions/tapi.path.computation.PathServiceEndPoint"
+        $ref: "#/definitions/tapi.path.computation.Path"
     description: "none"
     x-augmentation:
       prefix: "tapi-path-computation"
@@ -65073,9 +65072,9 @@ definitions:
   tapi.streaming.SupportedStreamTypeAugmentation1:
     type: "object"
     properties:
-      information-record-strategy:
+      compacted-log-details:
         description: "none"
-        $ref: "#/definitions/tapi.streaming.InformationRecordStrategy"
+        $ref: "#/definitions/tapi.streaming.CompactedLogDetails"
     description: "none"
     x-augmentation:
       prefix: "tapi-streaming"
@@ -65083,9 +65082,9 @@ definitions:
   tapi.streaming.SupportedStreamTypeAugmentation2:
     type: "object"
     properties:
-      compacted-log-details:
+      information-record-strategy:
         description: "none"
-        $ref: "#/definitions/tapi.streaming.CompactedLogDetails"
+        $ref: "#/definitions/tapi.streaming.InformationRecordStrategy"
     description: "none"
     x-augmentation:
       prefix: "tapi-streaming"
