--- a/OAS/tapi-equipment.yaml
+++ b/OAS/tapi-equipment.yaml
@@ -1,55 +1,25 @@
 ---
 swagger: "2.0"
 info:
-  description: "\nThis module contains TAPI Common Model definitions.\nSource: TapiCommon.uml\n\
-    - The TAPI YANG models included in this TAPI release are a *normative* part of\
-    \ the TAPI SDK.\n- The YANG specifications have been generated from the corresponding\
-    \ UML model using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
-    and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
-    <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
-    \ YANG model artifacts can be determined by referring to the corresponding UML\
-    \ artifacts.\nAs described in the UML models, some artifacts are considered *experimental*,\
-    \ and thus the corresponding YANG artifacts.\n- The ONF TAPI release process does\
-    \ not guarantee backward compatibility of YANG models across major versions of\
-    \ TAPI releases.\nThe YANG model backward compatibility criteria are outlined\
-    \ in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models included\
-    \ in this release may not be backward compatible with previous TAPI releases.\n\
+  description: "\nThis module contains TAPI Connectivity Model definitions.\nSource:\
+    \ TapiConnectivity.uml\n- The TAPI YANG models included in this TAPI release are\
+    \ a *normative* part of the TAPI SDK.\n- The YANG specifications have been generated\
+    \ from the corresponding UML model using the [ONF EAGLE UML2YANG mapping tool]\n\
+    <https://github.com/OpenNetworkingFoundation/EagleUmlYang>\nand further edited\
+    \ manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n<https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n\
+    - Status of YANG model artifacts can be determined by referring to the corresponding\
+    \ UML artifacts.\nAs described in the UML models, some artifacts are considered\
+    \ *experimental*, and thus the corresponding YANG artifacts.\n- The ONF TAPI release\
+    \ process does not guarantee backward compatibility of YANG models across major\
+    \ versions of TAPI releases.\nThe YANG model backward compatibility criteria are\
+    \ outlined in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models\
+    \ included in this release may not be backward compatible with previous TAPI releases.\n\
     Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
     \ This module is distributed under the Apache License 2.0.,\nThis module contains\
     \ TAPI Equipment Model definitions.\nSource: TapiEquipment.uml\n- The TAPI YANG\
     \ models included in this TAPI release are a *normative* part of the TAPI SDK.\n\
     - The YANG specifications have been generated from the corresponding UML model\
     \ using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
-    and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
-    <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
-    \ YANG model artifacts can be determined by referring to the corresponding UML\
-    \ artifacts.\nAs described in the UML models, some artifacts are considered *experimental*,\
-    \ and thus the corresponding YANG artifacts.\n- The ONF TAPI release process does\
-    \ not guarantee backward compatibility of YANG models across major versions of\
-    \ TAPI releases.\nThe YANG model backward compatibility criteria are outlined\
-    \ in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models included\
-    \ in this release may not be backward compatible with previous TAPI releases.\n\
-    Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
-    \ This module is distributed under the Apache License 2.0.,\nThis module contains\
-    \ TAPI Path Computation Model definitions.\nSource: TapiPathComputation.uml\n\
-    - The TAPI YANG models included in this TAPI release are a *normative* part of\
-    \ the TAPI SDK.\n- The YANG specifications have been generated from the corresponding\
-    \ UML model using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
-    and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
-    <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
-    \ YANG model artifacts can be determined by referring to the corresponding UML\
-    \ artifacts.\nAs described in the UML models, some artifacts are considered *experimental*,\
-    \ and thus the corresponding YANG artifacts.\n- The ONF TAPI release process does\
-    \ not guarantee backward compatibility of YANG models across major versions of\
-    \ TAPI releases.\nThe YANG model backward compatibility criteria are outlined\
-    \ in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models included\
-    \ in this release may not be backward compatible with previous TAPI releases.\n\
-    Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
-    \ This module is distributed under the Apache License 2.0.,\nThis module contains\
-    \ TAPI Notification Model definitions.\nSource: TapiNotification.uml\n- The TAPI\
-    \ YANG models included in this TAPI release are a *normative* part of the TAPI\
-    \ SDK.\n- The YANG specifications have been generated from the corresponding UML\
-    \ model using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
     and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
     <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
     \ YANG model artifacts can be determined by referring to the corresponding UML\
@@ -76,10 +46,40 @@ info:
     \ in this release may not be backward compatible with previous TAPI releases.\n\
     Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
     \ This module is distributed under the Apache License 2.0.,\nThis module contains\
-    \ TAPI Connectivity Model definitions.\nSource: TapiConnectivity.uml\n- The TAPI\
+    \ TAPI Notification Model definitions.\nSource: TapiNotification.uml\n- The TAPI\
     \ YANG models included in this TAPI release are a *normative* part of the TAPI\
     \ SDK.\n- The YANG specifications have been generated from the corresponding UML\
     \ model using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
+    and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
+    <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
+    \ YANG model artifacts can be determined by referring to the corresponding UML\
+    \ artifacts.\nAs described in the UML models, some artifacts are considered *experimental*,\
+    \ and thus the corresponding YANG artifacts.\n- The ONF TAPI release process does\
+    \ not guarantee backward compatibility of YANG models across major versions of\
+    \ TAPI releases.\nThe YANG model backward compatibility criteria are outlined\
+    \ in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models included\
+    \ in this release may not be backward compatible with previous TAPI releases.\n\
+    Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
+    \ This module is distributed under the Apache License 2.0.,\nThis module contains\
+    \ TAPI Path Computation Model definitions.\nSource: TapiPathComputation.uml\n\
+    - The TAPI YANG models included in this TAPI release are a *normative* part of\
+    \ the TAPI SDK.\n- The YANG specifications have been generated from the corresponding\
+    \ UML model using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
+    and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
+    <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
+    \ YANG model artifacts can be determined by referring to the corresponding UML\
+    \ artifacts.\nAs described in the UML models, some artifacts are considered *experimental*,\
+    \ and thus the corresponding YANG artifacts.\n- The ONF TAPI release process does\
+    \ not guarantee backward compatibility of YANG models across major versions of\
+    \ TAPI releases.\nThe YANG model backward compatibility criteria are outlined\
+    \ in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models included\
+    \ in this release may not be backward compatible with previous TAPI releases.\n\
+    Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
+    \ This module is distributed under the Apache License 2.0.,\nThis module contains\
+    \ TAPI Common Model definitions.\nSource: TapiCommon.uml\n- The TAPI YANG models\
+    \ included in this TAPI release are a *normative* part of the TAPI SDK.\n- The\
+    \ YANG specifications have been generated from the corresponding UML model using\
+    \ the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
     and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
     <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
     \ YANG model artifacts can be determined by referring to the corresponding UML\
@@ -107,7 +107,7 @@ info:
     Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
     \ This module is distributed under the Apache License 2.0."
   version: "2.4.1"
-  title: "tapi-common,tapi-equipment,tapi-path-computation,tapi-notification,tapi-topology,tapi-connectivity,tapi-streaming\
+  title: "tapi-connectivity,tapi-equipment,tapi-topology,tapi-notification,tapi-path-computation,tapi-common,tapi-streaming\
     \ API"
 host: "localhost:1234"
 consumes:
