Possibly last commit for 2.5.0 RC1
- RIA 547 3.0
- High Level Differences
- Changelog
- All YANG modules, references to 2.5 now 2.5.0
- Alarm List
- Notification and Streaming Sequences
- UML2YANG Tool User Guide
- Gendoc dumps

--- a/OAS/tapi-connectivity.yaml
+++ b/OAS/tapi-connectivity.yaml
@@ -979,7 +979,7 @@ paths:
           \ list"
         required: false
         schema:
-          $ref: "#/definitions/tapi.connectivity.context.ConnectivityContextWrapper"
+          $ref: "#/definitions/tapi.connectivity.ConnectivityContext"
       responses:
         "400":
           description: "Internal error"
