Commit for TAPI 2.5.0
- amended tapi-gnmi-streaming (uml, yang, oas, gendoc)
- amended tapi-equipment (references to profile) (uml, yang, tree, oas,
gendoc)
- updated tapi-tree
- amended TR-547 v3.1

--- a/OAS/tapi-eth.yaml
+++ b/OAS/tapi-eth.yaml
@@ -1,10 +1,70 @@
 ---
 swagger: "2.0"
 info:
-  description: "\nThis module contains TAPI Common Model definitions.\nSource: TapiCommon.uml\n\
+  description: "\nThis module contains TAPI Connectivity Model definitions.\nSource:\
+    \ TapiConnectivity.uml\n- The TAPI YANG models included in this TAPI release are\
+    \ a *normative* part of the TAPI SDK.\n- The YANG specifications have been generated\
+    \ from the corresponding UML model using the [ONF EAGLE UML2YANG mapping tool]\n\
+    <https://github.com/OpenNetworkingFoundation/EagleUmlYang>\nand further edited\
+    \ manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n<https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n\
+    - Status of YANG model artifacts can be determined by referring to the corresponding\
+    \ UML artifacts.\nAs described in the UML models, some artifacts are considered\
+    \ *experimental*, and thus the corresponding YANG artifacts.\n- The ONF TAPI release\
+    \ process does not guarantee backward compatibility of YANG models across major\
+    \ versions of TAPI releases.\nThe YANG model backward compatibility criteria are\
+    \ outlined in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models\
+    \ included in this release may not be backward compatible with previous TAPI releases.\n\
+    Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
+    \ This module is distributed under the Apache License 2.0.,\nThis module contains\
+    \ TAPI Common Model definitions.\nSource: TapiCommon.uml\n- The TAPI YANG models\
+    \ included in this TAPI release are a *normative* part of the TAPI SDK.\n- The\
+    \ YANG specifications have been generated from the corresponding UML model using\
+    \ the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
+    and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
+    <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
+    \ YANG model artifacts can be determined by referring to the corresponding UML\
+    \ artifacts.\nAs described in the UML models, some artifacts are considered *experimental*,\
+    \ and thus the corresponding YANG artifacts.\n- The ONF TAPI release process does\
+    \ not guarantee backward compatibility of YANG models across major versions of\
+    \ TAPI releases.\nThe YANG model backward compatibility criteria are outlined\
+    \ in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models included\
+    \ in this release may not be backward compatible with previous TAPI releases.\n\
+    Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
+    \ This module is distributed under the Apache License 2.0.,\nThis module contains\
+    \ TAPI Topology Model definitions.\nSource: TapiTopology.uml\n- The TAPI YANG\
+    \ models included in this TAPI release are a *normative* part of the TAPI SDK.\n\
+    - The YANG specifications have been generated from the corresponding UML model\
+    \ using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
+    and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
+    <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
+    \ YANG model artifacts can be determined by referring to the corresponding UML\
+    \ artifacts.\nAs described in the UML models, some artifacts are considered *experimental*,\
+    \ and thus the corresponding YANG artifacts.\n- The ONF TAPI release process does\
+    \ not guarantee backward compatibility of YANG models across major versions of\
+    \ TAPI releases.\nThe YANG model backward compatibility criteria are outlined\
+    \ in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models included\
+    \ in this release may not be backward compatible with previous TAPI releases.\n\
+    Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
+    \ This module is distributed under the Apache License 2.0.,\nThis module contains\
+    \ TAPI Path Computation Model definitions.\nSource: TapiPathComputation.uml\n\
     - The TAPI YANG models included in this TAPI release are a *normative* part of\
     \ the TAPI SDK.\n- The YANG specifications have been generated from the corresponding\
     \ UML model using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
+    and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
+    <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
+    \ YANG model artifacts can be determined by referring to the corresponding UML\
+    \ artifacts.\nAs described in the UML models, some artifacts are considered *experimental*,\
+    \ and thus the corresponding YANG artifacts.\n- The ONF TAPI release process does\
+    \ not guarantee backward compatibility of YANG models across major versions of\
+    \ TAPI releases.\nThe YANG model backward compatibility criteria are outlined\
+    \ in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models included\
+    \ in this release may not be backward compatible with previous TAPI releases.\n\
+    Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
+    \ This module is distributed under the Apache License 2.0.,\nThis module contains\
+    \ TAPI Streaming Model definitions.\nSource: TapiStreaming.uml\n- The TAPI YANG\
+    \ models included in this TAPI release are a *normative* part of the TAPI SDK.\n\
+    - The YANG specifications have been generated from the corresponding UML model\
+    \ using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
     and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
     <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
     \ YANG model artifacts can be determined by referring to the corresponding UML\
@@ -46,85 +106,10 @@ info:
     \ in this release may not be backward compatible with previous TAPI releases.\n\
     Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
     \ This module is distributed under the Apache License 2.0.,\nThis module contains\
-    \ TAPI Streaming Model definitions.\nSource: TapiStreaming.uml\n- The TAPI YANG\
-    \ models included in this TAPI release are a *normative* part of the TAPI SDK.\n\
-    - The YANG specifications have been generated from the corresponding UML model\
-    \ using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
-    and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
-    <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
-    \ YANG model artifacts can be determined by referring to the corresponding UML\
-    \ artifacts.\nAs described in the UML models, some artifacts are considered *experimental*,\
-    \ and thus the corresponding YANG artifacts.\n- The ONF TAPI release process does\
-    \ not guarantee backward compatibility of YANG models across major versions of\
-    \ TAPI releases.\nThe YANG model backward compatibility criteria are outlined\
-    \ in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models included\
-    \ in this release may not be backward compatible with previous TAPI releases.\n\
-    Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
-    \ This module is distributed under the Apache License 2.0.,\nThis module contains\
-    \ TAPI Topology Model definitions.\nSource: TapiTopology.uml\n- The TAPI YANG\
-    \ models included in this TAPI release are a *normative* part of the TAPI SDK.\n\
-    - The YANG specifications have been generated from the corresponding UML model\
-    \ using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
-    and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
-    <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
-    \ YANG model artifacts can be determined by referring to the corresponding UML\
-    \ artifacts.\nAs described in the UML models, some artifacts are considered *experimental*,\
-    \ and thus the corresponding YANG artifacts.\n- The ONF TAPI release process does\
-    \ not guarantee backward compatibility of YANG models across major versions of\
-    \ TAPI releases.\nThe YANG model backward compatibility criteria are outlined\
-    \ in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models included\
-    \ in this release may not be backward compatible with previous TAPI releases.\n\
-    Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
-    \ This module is distributed under the Apache License 2.0.,\nThis module contains\
     \ TAPI OAM Model definitions.\nSource: TapiOam.uml\n- The TAPI YANG models included\
     \ in this TAPI release are a *normative* part of the TAPI SDK.\n- The YANG specifications\
     \ have been generated from the corresponding UML model using the [ONF EAGLE UML2YANG\
     \ mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
-    and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
-    <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
-    \ YANG model artifacts can be determined by referring to the corresponding UML\
-    \ artifacts.\nAs described in the UML models, some artifacts are considered *experimental*,\
-    \ and thus the corresponding YANG artifacts.\n- The ONF TAPI release process does\
-    \ not guarantee backward compatibility of YANG models across major versions of\
-    \ TAPI releases.\nThe YANG model backward compatibility criteria are outlined\
-    \ in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models included\
-    \ in this release may not be backward compatible with previous TAPI releases.\n\
-    Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
-    \ This module is distributed under the Apache License 2.0.,\nThis module contains\
-    \ TAPI Path Computation Model definitions.\nSource: TapiPathComputation.uml\n\
-    - The TAPI YANG models included in this TAPI release are a *normative* part of\
-    \ the TAPI SDK.\n- The YANG specifications have been generated from the corresponding\
-    \ UML model using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
-    and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
-    <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
-    \ YANG model artifacts can be determined by referring to the corresponding UML\
-    \ artifacts.\nAs described in the UML models, some artifacts are considered *experimental*,\
-    \ and thus the corresponding YANG artifacts.\n- The ONF TAPI release process does\
-    \ not guarantee backward compatibility of YANG models across major versions of\
-    \ TAPI releases.\nThe YANG model backward compatibility criteria are outlined\
-    \ in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models included\
-    \ in this release may not be backward compatible with previous TAPI releases.\n\
-    Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
-    \ This module is distributed under the Apache License 2.0.,\nThis module contains\
-    \ TAPI Streaming gNMI Model definitions.\nSource: TapiStreamingGnmi.uml\n- The\
-    \ TAPI YANG models included in this TAPI release are a *normative* part of the\
-    \ TAPI SDK.\n- The YANG specifications have been generated from the corresponding\
-    \ UML model using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
-    and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
-    <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
-    \ YANG model artifacts can be determined by referring to the corresponding UML\
-    \ artifacts.\nAs described in the UML models, some artifacts are considered *experimental*,\
-    \ and thus the corresponding YANG artifacts.\n- The ONF TAPI release process does\
-    \ not guarantee backward compatibility of YANG models across major versions of\
-    \ TAPI releases.\nThe YANG model backward compatibility criteria are outlined\
-    \ in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models included\
-    \ in this release may not be backward compatible with previous TAPI releases.\n\
-    Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
-    \ This module is distributed under the Apache License 2.0.,\nThis module contains\
-    \ TAPI Connectivity Model definitions.\nSource: TapiConnectivity.uml\n- The TAPI\
-    \ YANG models included in this TAPI release are a *normative* part of the TAPI\
-    \ SDK.\n- The YANG specifications have been generated from the corresponding UML\
-    \ model using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
     and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
     <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
     \ YANG model artifacts can be determined by referring to the corresponding UML\
@@ -150,9 +135,24 @@ info:
     \ in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models included\
     \ in this release may not be backward compatible with previous TAPI releases.\n\
     Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
+    \ This module is distributed under the Apache License 2.0.,\nThis module contains\
+    \ TAPI Streaming gNMI Model definitions.\nSource: TapiStreamingGnmi.uml\n- The\
+    \ TAPI YANG models included in this TAPI release are a *normative* part of the\
+    \ TAPI SDK.\n- The YANG specifications have been generated from the corresponding\
+    \ UML model using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
+    and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
+    <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
+    \ YANG model artifacts can be determined by referring to the corresponding UML\
+    \ artifacts.\nAs described in the UML models, some artifacts are considered *experimental*,\
+    \ and thus the corresponding YANG artifacts.\n- The ONF TAPI release process does\
+    \ not guarantee backward compatibility of YANG models across major versions of\
+    \ TAPI releases.\nThe YANG model backward compatibility criteria are outlined\
+    \ in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models included\
+    \ in this release may not be backward compatible with previous TAPI releases.\n\
+    Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
     \ This module is distributed under the Apache License 2.0."
   version: "2.4.1"
-  title: "tapi-common,tapi-fm,tapi-notification,tapi-streaming,tapi-topology,tapi-oam,tapi-path-computation,tapi-gnmi-streaming,tapi-connectivity,tapi-eth\
+  title: "tapi-connectivity,tapi-common,tapi-topology,tapi-path-computation,tapi-streaming,tapi-fm,tapi-notification,tapi-oam,tapi-eth,tapi-gnmi-streaming\
     \ API"
 host: "localhost:1234"
 consumes:
