--- a/OAS/tapi-dsr.yaml
+++ b/OAS/tapi-dsr.yaml
@@ -1,12 +1,11 @@
 ---
 swagger: "2.0"
 info:
-  description: "\nThis module contains TAPI Streaming gNMI Model definitions.\nSource:\
-    \ TapiStreamingGnmi.uml\n- The TAPI YANG models included in this TAPI release\
-    \ are a *normative* part of the TAPI SDK.\n- The YANG specifications have been\
-    \ generated from the corresponding UML model using the [ONF EAGLE UML2YANG mapping\
-    \ tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\nand further\
-    \ edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
+  description: "\nThis module contains TAPI OAM Model definitions.\nSource: TapiOam.uml\n\
+    - The TAPI YANG models included in this TAPI release are a *normative* part of\
+    \ the TAPI SDK.\n- The YANG specifications have been generated from the corresponding\
+    \ UML model using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
+    and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
     <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
     \ YANG model artifacts can be determined by referring to the corresponding UML\
     \ artifacts.\nAs described in the UML models, some artifacts are considered *experimental*,\
@@ -21,21 +20,6 @@ info:
     \ models included in this TAPI release are a *normative* part of the TAPI SDK.\n\
     - The YANG specifications have been generated from the corresponding UML model\
     \ using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
-    and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
-    <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
-    \ YANG model artifacts can be determined by referring to the corresponding UML\
-    \ artifacts.\nAs described in the UML models, some artifacts are considered *experimental*,\
-    \ and thus the corresponding YANG artifacts.\n- The ONF TAPI release process does\
-    \ not guarantee backward compatibility of YANG models across major versions of\
-    \ TAPI releases.\nThe YANG model backward compatibility criteria are outlined\
-    \ in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models included\
-    \ in this release may not be backward compatible with previous TAPI releases.\n\
-    Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
-    \ This module is distributed under the Apache License 2.0.,\nThis module contains\
-    \ TAPI Connectivity Model definitions.\nSource: TapiConnectivity.uml\n- The TAPI\
-    \ YANG models included in this TAPI release are a *normative* part of the TAPI\
-    \ SDK.\n- The YANG specifications have been generated from the corresponding UML\
-    \ model using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
     and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
     <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
     \ YANG model artifacts can be determined by referring to the corresponding UML\
@@ -62,21 +46,6 @@ info:
     \ in this release may not be backward compatible with previous TAPI releases.\n\
     Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
     \ This module is distributed under the Apache License 2.0.,\nThis module contains\
-    \ TAPI Fault Management Model definitions.\nSource: TapiFm.uml\n- The TAPI YANG\
-    \ models included in this TAPI release are a *normative* part of the TAPI SDK.\n\
-    - The YANG specifications have been generated from the corresponding UML model\
-    \ using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
-    and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
-    <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
-    \ YANG model artifacts can be determined by referring to the corresponding UML\
-    \ artifacts.\nAs described in the UML models, some artifacts are considered *experimental*,\
-    \ and thus the corresponding YANG artifacts.\n- The ONF TAPI release process does\
-    \ not guarantee backward compatibility of YANG models across major versions of\
-    \ TAPI releases.\nThe YANG model backward compatibility criteria are outlined\
-    \ in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models included\
-    \ in this release may not be backward compatible with previous TAPI releases.\n\
-    Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
-    \ This module is distributed under the Apache License 2.0.,\nThis module contains\
     \ TAPI Digital Signal Rate Model definitions.\nSource: TapiDsr.uml\n- The TAPI\
     \ YANG models included in this TAPI release are a *normative* part of the TAPI\
     \ SDK.\n- The YANG specifications have been generated from the corresponding UML\
@@ -92,25 +61,10 @@ info:
     \ in this release may not be backward compatible with previous TAPI releases.\n\
     Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
     \ This module is distributed under the Apache License 2.0.,\nThis module contains\
-    \ TAPI OAM Model definitions.\nSource: TapiOam.uml\n- The TAPI YANG models included\
-    \ in this TAPI release are a *normative* part of the TAPI SDK.\n- The YANG specifications\
-    \ have been generated from the corresponding UML model using the [ONF EAGLE UML2YANG\
-    \ mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
-    and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
-    <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
-    \ YANG model artifacts can be determined by referring to the corresponding UML\
-    \ artifacts.\nAs described in the UML models, some artifacts are considered *experimental*,\
-    \ and thus the corresponding YANG artifacts.\n- The ONF TAPI release process does\
-    \ not guarantee backward compatibility of YANG models across major versions of\
-    \ TAPI releases.\nThe YANG model backward compatibility criteria are outlined\
-    \ in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models included\
-    \ in this release may not be backward compatible with previous TAPI releases.\n\
-    Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
-    \ This module is distributed under the Apache License 2.0.,\nThis module contains\
-    \ TAPI Path Computation Model definitions.\nSource: TapiPathComputation.uml\n\
-    - The TAPI YANG models included in this TAPI release are a *normative* part of\
-    \ the TAPI SDK.\n- The YANG specifications have been generated from the corresponding\
-    \ UML model using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
+    \ TAPI Connectivity Model definitions.\nSource: TapiConnectivity.uml\n- The TAPI\
+    \ YANG models included in this TAPI release are a *normative* part of the TAPI\
+    \ SDK.\n- The YANG specifications have been generated from the corresponding UML\
+    \ model using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
     and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
     <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
     \ YANG model artifacts can be determined by referring to the corresponding UML\
@@ -137,6 +91,36 @@ info:
     \ in this release may not be backward compatible with previous TAPI releases.\n\
     Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
     \ This module is distributed under the Apache License 2.0.,\nThis module contains\
+    \ TAPI Fault Management Model definitions.\nSource: TapiFm.uml\n- The TAPI YANG\
+    \ models included in this TAPI release are a *normative* part of the TAPI SDK.\n\
+    - The YANG specifications have been generated from the corresponding UML model\
+    \ using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
+    and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
+    <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
+    \ YANG model artifacts can be determined by referring to the corresponding UML\
+    \ artifacts.\nAs described in the UML models, some artifacts are considered *experimental*,\
+    \ and thus the corresponding YANG artifacts.\n- The ONF TAPI release process does\
+    \ not guarantee backward compatibility of YANG models across major versions of\
+    \ TAPI releases.\nThe YANG model backward compatibility criteria are outlined\
+    \ in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models included\
+    \ in this release may not be backward compatible with previous TAPI releases.\n\
+    Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
+    \ This module is distributed under the Apache License 2.0.,\nThis module contains\
+    \ TAPI Streaming gNMI Model definitions.\nSource: TapiStreamingGnmi.uml\n- The\
+    \ TAPI YANG models included in this TAPI release are a *normative* part of the\
+    \ TAPI SDK.\n- The YANG specifications have been generated from the corresponding\
+    \ UML model using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
+    and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
+    <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
+    \ YANG model artifacts can be determined by referring to the corresponding UML\
+    \ artifacts.\nAs described in the UML models, some artifacts are considered *experimental*,\
+    \ and thus the corresponding YANG artifacts.\n- The ONF TAPI release process does\
+    \ not guarantee backward compatibility of YANG models across major versions of\
+    \ TAPI releases.\nThe YANG model backward compatibility criteria are outlined\
+    \ in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models included\
+    \ in this release may not be backward compatible with previous TAPI releases.\n\
+    Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
+    \ This module is distributed under the Apache License 2.0.,\nThis module contains\
     \ TAPI Notification Model definitions.\nSource: TapiNotification.uml\n- The TAPI\
     \ YANG models included in this TAPI release are a *normative* part of the TAPI\
     \ SDK.\n- The YANG specifications have been generated from the corresponding UML\
@@ -151,9 +135,24 @@ info:
     \ in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models included\
     \ in this release may not be backward compatible with previous TAPI releases.\n\
     Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
+    \ This module is distributed under the Apache License 2.0.,\nThis module contains\
+    \ TAPI Path Computation Model definitions.\nSource: TapiPathComputation.uml\n\
+    - The TAPI YANG models included in this TAPI release are a *normative* part of\
+    \ the TAPI SDK.\n- The YANG specifications have been generated from the corresponding\
+    \ UML model using the [ONF EAGLE UML2YANG mapping tool]\n<https://github.com/OpenNetworkingFoundation/EagleUmlYang>\n\
+    and further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\n\
+    <https://wiki.opennetworking.org/display/OIMT/IISOMI+Deliverables>\n- Status of\
+    \ YANG model artifacts can be determined by referring to the corresponding UML\
+    \ artifacts.\nAs described in the UML models, some artifacts are considered *experimental*,\
+    \ and thus the corresponding YANG artifacts.\n- The ONF TAPI release process does\
+    \ not guarantee backward compatibility of YANG models across major versions of\
+    \ TAPI releases.\nThe YANG model backward compatibility criteria are outlined\
+    \ in section 11 of <https://tools.ietf.org/html/rfc7950>.\nYANG models included\
+    \ in this release may not be backward compatible with previous TAPI releases.\n\
+    Copyright (c) 2023 Open Networking Foundation (ONF). All rights reserved.\nLicense:\
     \ This module is distributed under the Apache License 2.0."
   version: "2.4.1"
-  title: "tapi-gnmi-streaming,tapi-streaming,tapi-connectivity,tapi-common,tapi-fm,tapi-dsr,tapi-oam,tapi-path-computation,tapi-topology,tapi-notification\
+  title: "tapi-oam,tapi-streaming,tapi-common,tapi-dsr,tapi-connectivity,tapi-topology,tapi-fm,tapi-gnmi-streaming,tapi-notification,tapi-path-computation\
     \ API"
 host: "localhost:1234"
 consumes:
